# Tests

./: .gitignore  Output.txt  README.md  erase_all_artifacts.bat  erase_all_windows.bat  test_all_linux.sh  test_all_windows.bat  test_linux.sh  test_windows.bat
DevTestsCanvas2D/Application/: APP_GEN_Defines.h  DevTestsCanvas2D.cpp  DevTestsCanvas2D.h  DevTestsCanvas2D_CFG.cpp  DevTestsCanvas2D_CFG.h
DevTestsCanvas2D/CMake/: CMakeLists.txt
DevTestsCanvas2D/Sources/: DevTestsCanvas2D.cpp  DevTestsCanvas2D_CFG.cpp  DevTestsCanvas2D_CFG.h
DevTestsCanvas2D/assets/: canvas2d.ini  devtestscanvas2d.ini
DevTestsConsole/Application/: APP_GEN_Defines.h  DevTestsConsole.cpp  DevTestsConsole.h  DevTestsConsole_CFG.cpp  DevTestsConsole_CFG.h  DevTestsConsole_LinuxPlatform.cpp  DevTestsConsole_LinuxPlatform.h  DevTestsConsole_WindowsPlatform.cpp  DevTestsConsole_WindowsPlatform.h  DevTestsConsole_XProperty.h  DevTestsConsole_XSerializable.h
DevTestsConsole/CMake/: CMakeLists.txt
DevTestsConsole/Sources/: APP_GEN_Defines.h  DevTestsConsole.cpp  DevTestsConsole_CFG.cpp  DevTestsConsole_XSerializable.h
DevTestsConsole/assets/: Unit tests.ini  devtestsconsole.ini  example.xml  remote_devtestsconsole.ini  test.lic  testcmp.txt
DevTestsDevices/Application/: APP_GEN_Defines.h  DevTestsDevices.cpp  DevTestsDevices.h  DevTestsDevices_LinuxPlatform.cpp  DevTestsDevices_LinuxPlatform.h  DevTestsDevices_STM32Platform.cpp  DevTestsDevices_STM32Platform.h  DevTestsDevices_WindowsPlatform.cpp  DevTestsDevices_WindowsPlatform.h
DevTestsDevices/CMake/: CMakeLists.txt  launch.vs.json
DevTestsDevices/Sources/: DevTestsDevices.cpp  DevTestsDevices.h  DevTestsDevices_LinuxPlatform.h  DevTestsDevices_STM32Platform.cpp
UnitTestDevices/Application/: UnitTestDevices.cpp  UnitTestDevices.h  UnitTestDevices_LinuxPlatform.cpp  UnitTestDevices_LinuxPlatform.h  UnitTestDevices_STM32Platform.cpp  UnitTestDevices_STM32Platform.h  UnitTestDevices_WindowsPlatform.cpp  UnitTestDevices_WindowsPlatform.h
UnitTests/Application/: APP_GEN_Defines.h  UnitTests.cpp  UnitTests.h  UnitTests_CFG.cpp  UnitTests_CFG.h  UnitTests_LinuxPlatform.cpp  UnitTests_LinuxPlatform.h  UnitTests_WindowsPlatform.cpp  UnitTests_WindowsPlatform.h  UnitTests_XBase.cpp  UnitTests_XBase.h  UnitTests_XBuffer.cpp  UnitTests_XBuffer.h  UnitTests_XDateTime.cpp  UnitTests_XDateTime.h  UnitTests_XSleep.cpp  UnitTests_XSleep.h  UnitTests_XString.cpp  UnitTests_XString.h  UnitTests_XTimer.cpp  UnitTests_XTimer.h  UnitTests_XUUID.cpp  UnitTests_XUUID.h  UnitTests_XVariant.cpp  UnitTests_XVariant.h
UnitTests/__Application/: APP_GEN_Defines.h  UnitTests.cpp  UnitTests_XBuffer.cpp  UnitTests_XBuffer.h  UnitTests_XSleep.cpp  UnitTests_XString.h
UnitTests/assets/: Unit tests.ini  devices  example.avi  scraperweb.xml  test.lic  tests.ini
UnitTestsGraphics/Application/: APP_GEN_Defines.h  UnitTestGraphics.cpp  UnitTestGraphics.h  UnitTestGraphics_CFG.cpp  UnitTestGraphics_CFG.h
UnitTestsGraphics/assets/: unittestgraphics.lng
XUtils_UnitTests/Application/: APP_GEN_Defines.h  XUtils_UnitTests.cpp  XUtils_UnitTests.h  XUtils_UnitTests_XBase.cpp  XUtils_UnitTests_XBase.h  XUtils_UnitTests_XBuffer.cpp  XUtils_UnitTests_XBuffer.h  XUtils_UnitTests_XDateTime.cpp  XUtils_UnitTests_XDateTime.h  XUtils_UnitTests_XSleep.cpp  XUtils_UnitTests_XSleep.h  XUtils_UnitTests_XString.cpp  XUtils_UnitTests_XString.h  XUtils_UnitTests_XTimer.cpp  XUtils_UnitTests_XTimer.h  XUtils_UnitTests_XUUID.cpp  XUtils_UnitTests_XUUID.h  XUtils_UnitTests_XVariant.cpp  XUtils_UnitTests_XVariant.h
XUtils_UnitTests/CMake/: CMakeLists.txt
XUtils_UnitTests/Sources/: XUtils_UnitTests.cpp  XUtils_UnitTests.h  XUtils_UnitTests_XBase.cpp  XUtils_UnitTests_XBase.h  XUtils_UnitTests_XBuffer.h  (+9 more)
(+28 files in other folders)
